# k8s-autopilot

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose-dev.yml  docker-compose.yml  docker-entrypoint.sh  docker-healthcheck.sh  pyproject.toml  pyproject.toml.bak  uv-requirements.txt
.github/workflows/: autopilot.yaml  ci.yml  veena.yaml
.talkops/: intent.yaml
a2ui_extenstion/: README.md  agent_development.md  pyproject.toml
a2ui_extenstion/src/a2ui/: __init__.py  a2a.py  a2ui_extension.py
docs/: ONBOARDING_LLM_PROVIDER.md  helm-complete-guide.md  k8s-autopilot-architecture-changes-summary.md  k8s-autopilot-architecture-enhanced.md  k8s-autopilot-architecture.md
docs/a2ui/: README.md
docs/app_onboarding/argo_rollouts/: README.md
docs/app_onboarding/argocd/: README.md
docs/app_onboarding/traefik/: README.md
docs/helm_generation/generator/: README.md  generator-agent-documentation.md
docs/helm_generation/supervisor/: README.md  supervisor-agent-documentation.md
docs/helm_generation/template/: README.md  tools-conditional-tools.md  tools-core-tools.md
docs/helm_mgmt/: README.md
docs/mcp/: helm-mcp-server.md
docs/observability/: README.md
docs/observability/alertmanager/: README.md
docs/observability/loki/: README.md
docs/observability/opentelemetry/: README.md
docs/observability/prometheus/: README.md
docs/observability/tempo/: README.md
docs/planner/: planner-agent-documentation.md
docs/supervisor/: README.md  supervisor-agent-documentation.md
docs/template/: template-coordinator-documentation.md  traefik-comprehensive-guide.md
k8s_autopilot/: server.py
k8s_autopilot/card/: k8s_autopilot.json
k8s_autopilot/config/: config.py  default.py
k8s_autopilot/core/: __init__.py  a2a_autopilot_executor.py  context_probe.py
k8s_autopilot/core/a2ui/: __init__.py  a2ui_builder.py  catalog_manager.py  data_reduction.py  dynamic_schema.py  examples.py  obs_a2ui_tools.py  obs_surface_builder.py  param_extractor.py  prompt_builder.py  registry.py  risk_classification.py  schema.py  schema_loader.py  server_to_client.json  standard_catalog_definition.json  surface_builder.py  view_models.py
k8s_autopilot/core/agents/: __init__.py  base_agent.py  duplicate_guard.py  profiles.py  shared_middleware.py  shared_subagent.py  supervisor_agent.py  supervisor_handoff_tools.py  supervisor_middleware.py  types.py
k8s_autopilot/core/hitl/: __init__.py  checkpointer.py  client_helpers.py  future_gates.py  future_tools.py  gate_tools.py  gates.py  middleware.py  request_validator.py  safe_resume.py  tool_interrupt_helpers.py  tools.py  utils.py  validation_tool.py
k8s_autopilot/core/llm/: base_llm_provider.py  llm_provider.py
k8s_autopilot/core/state/: app_operator_state.py  base.py  handoff_contracts.py  helm_operator_state.py  helm_planner_state.py  k8s_operator_state.py  observability_state.py  plan_execute_models.py  state_transformer.py  supervisor_state.py
k8s_autopilot/core/tools/: __init__.py  kubectl_tools.py
k8s_autopilot/utils/: domain_summary.py  escalate_tool.py  exceptions.py  llm.py  logger.py  mcp_client.py  memory.py  operations_context.py  shared_store.py  user_input_tool.py
k8s_autopilot_client/: client.py
memory/app-operator/: AGENTS.md  hitl-policies.md
memory/helm-operator/: AGENTS.md  hitl-policies.md
memory/k8s-operator/: AGENTS.md  hitl-policies.md
memory/observability/: AGENTS.md  hitl-policies.md
scripts/: cleanup_data.sh  pf.sh  validate_skills.py
scripts/infra/monitoring/: traefik-servicemonitor.yaml
skills/app-operator/argo-rollouts-gitops/: SKILL.md
skills/app-operator/argocd-gitops/: SKILL.md
skills/app-operator/traefik-edge-routing/: SKILL.md
skills/helm-operator/github-agent/: SKILL.md
skills/helm-operator/helm-generator/: SKILL.md
skills/helm-operator/helm-operation/: SKILL.md  TROUBLESHOOTING.md
skills/helm-operator/helm-skill-builder/: SKILL.md
skills/helm-operator/helm-updater/: SKILL.md
skills/helm-operator/helm-validator/: SKILL.md
skills/k8s-operator/kubernetes-cluster-ops/: SKILL.md
skills/k8s-operator/response-formats/: SKILL.md
skills/observability/alertmanager/: SKILL.md
skills/observability/coordinator/: SKILL.md
skills/observability/loki/: SKILL.md
skills/observability/opentelemetry/: SKILL.md
skills/observability/prometheus/: SKILL.md
skills/observability/response-formats/: SKILL.md
skills/observability/tempo/: SKILL.md
tests/: README.md  conftest.py  pytest.ini
tests/evals/: generate_datasets.py  subagent_eval_harness.py
tests/evals/app_operator/: runner.py  test_coordinator_routing.py  test_eval_scenarios.py
tests/evals/evaluators/: llm_judge.py  rule_based.py
tests/evals/helm_operator/: runner.py  test_eval_regression.py  test_evals.py  test_prompt_reasoning.py  test_trajectory_evaluator_stub.py
tests/evals/observability_operator/: runner.py  test_coordinator_routing.py  test_eval_scenarios.py
tests/hitl/: test_a2ui_streaming.py  test_commit_gate.py  test_commit_resume_push.py  test_commit_resume_reject.py  test_helm_destructive_hitl.py
tests/hitl/app_operator/: conftest.py  test_argocd_hitl.py  test_prod_namespace_hitl.py  test_reject_prevents_exec.py  test_rollouts_hitl.py  test_traefik_hitl.py
tests/hitl/observability_operator/: __init__.py  test_alertmanager_hitl.py  test_opentelemetry_hitl.py  test_prometheus_hitl.py  test_reject_prevents_exec.py  test_tempo_hitl.py
tests/integration/app_operator/: conftest.py  helpers.py  test_argocd_read_path.py  test_argocd_write_path.py  test_cross_domain_context.py  test_negative_evals.py  test_oos_routing.py  test_plan_lock_flow.py  test_rollout_lifecycle.py  test_rollout_migration.py  test_traefik_routing.py
tests/integration/helm_operator/: test_helm_operation_flow.py  test_negative_evals.py  test_new_chart_flow.py  test_oos_routing.py  test_skill_skip_path.py  test_update_chart_flow.py  test_validator_retry.py
tests/integration/observability_operator/: __init__.py  conftest.py  helpers.py  (+2 more)
workspace/: README.md
workspace/helm-charts/: README.md
(+266 files in other folders)
