[project]
name = "k8s-autopilot"
version = "0.1.0"
description = "Multi Agents responsible for complete Kubernetes deployment automation (generation → deployment → monitoring)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk>=1.1.0",
    "a2ui-agent",
    "colorama>=0.4.6",
    "copilotkit>=0.1.0",
    "deepagents>=0.6.7",
    "langchain>=1.3.2",
    "langchain-anthropic>=1.4.4",
    "langchain-aws>=1.5.0",
    "langchain-core>=1.4.0",
    "langchain-google-genai>=4.2.4",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.2",
    "langgraph-checkpoint-postgres>=3.1.0",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "uvicorn>=0.42.0",
]

license = {text = "Apache-2.0"}
license-files = ["LICENSE"]
authors = [
    {name = "talkops"},
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
mcp-servers = [
    "talkops-prometheus-mcp-server>=0.1.0",
    "talkops-alertmanager-mcp-server>=0.1.0",
    "talkops-helm-mcp-server>=0.4.0",
    "talkops-argocd-mcp-server>=0.3.0",
    "talkops-argo-rollout-mcp-server>=0.1.0",
    "talkops-traefik-mcp-server>=0.1.0",
    "talkops-opentelemetry-mcp-server>=0.1.0",
    "talkops-loki-mcp-server>=0.1.0",
    "talkops-tempo-mcp-server>=0.1.0",
]
interpreter = [
    "langchain-quickjs>=0.1.0",
]

[project.urls]
homepage = "https://github.com/talkops-ai/k8s-autopilot"
repository = "https://github.com/talkops-ai/k8s-autopilot.git"
documentation = "https://github.com/talkops-ai/k-autopilot/blob/main/README.md"

[project.scripts]
k8s-autopilot = "k8s_autopilot.server:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.9.7",
    "mypy>=1.0.0",
    "ipykernel>=6.29.0",
    "rich>=14.2.0",
    "asyncclick>=8.3.0.7",
    "agentevals>=0.0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["k8s_autopilot"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "AIR", "PERF", "FURB", "LOG", "RUF"]
ignore = ["S101", "PLR0913", "PLR2004", "C901", "W191"]

[tool.ruff.lint.isort]
known-first-party = ["k8s_autopilot"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.uv.sources]
a2ui-agent = { path = "a2ui_extenstion", editable = true }
talkops-opentelemetry-mcp-server = { path = "../talkops-mcp/src/opentelemetry-mcp-server", editable = true }
talkops-prometheus-mcp-server = { path = "../talkops-mcp/src/prometheus-mcp-server", editable = true }
talkops-alertmanager-mcp-server = { path = "../talkops-mcp/src/alertmanager-mcp-server", editable = true }
talkops-loki-mcp-server = { path = "../talkops-mcp/src/loki-mcp-server", editable = true }
talkops-tempo-mcp-server = { path = "../talkops-mcp/src/tempo-mcp-server", editable = true }
talkops-helm-mcp-server = { path = "../talkops-mcp/src/helm-mcp-server", editable = true }
talkops-argocd-mcp-server = { path = "../talkops-mcp/src/argocd-mcp-server", editable = true }
talkops-argo-rollout-mcp-server = { path = "../talkops-mcp/src/argo-rollout-mcp-server", editable = true }
talkops-traefik-mcp-server = { path = "../talkops-mcp/src/traefik-mcp-server", editable = true }

[tool.pyrefly]
python_interpreter = ".venv/bin/python"
